2005-07-12  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Update gecko configure checks for seamonkey.

2005-07-05  Christian Persch  <chpe@cvs.gnome.org>

	* NEWS:
	* src/Listener.cpp:
	* src/main.cpp:

	Move env var unsetting to the onload handler, since it needs to be
	done on the very first onload, not on the main DOM window's onload.
	Move the main window offscreen before showing/withdrawing it.

2005-06-05  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:

	Disable disk cache.

2005-06-02  Christian Persch  <chpe@cvs.gnome.org>

	* data/prefs.js:

	Don't persist cookies and passwords.

	* src/main.cpp:

	Enable profile, since gecko crashes otherwise on https sites and when
	trying to access the password manager.

2005-05-26  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:

	Automatically detect whether we have a mozilla debug build.

2005-05-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Minor fix from mozilla nsDocumentViewer.cpp.

2005-05-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/style.css:

	Only suppress scrollbars for some elements; using it for <div> breaks
	the layout horribly.

2005-05-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/Makefile.am:
	* src/Writer.cpp:
	* src/Writer.h:

	Fix crash in the PNG writer when Prepare was never called.
	Adapt to changed behaviour in nsIViewManager::RenderOffscreen;
	the rect is now converted (and rounded, urgh) to pixels.

2005-05-10  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	* data/style.css:
	* src/main.cpp: (init_gecko):

	Add a stylesheet to remove the scrollbars.

2005-05-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/Listener.cpp:
	* src/Listener.h:

	Fix for mozilla API change to nsIDOMLoadListener.

2005-04-26  Christian Persch  <chpe@cvs.gnome.org>

	* src/Writer.cpp:

	Fix a mem leak, and simplify the code for little endian case.

2005-04-26  Christian Persch  <chpe@cvs.gnome.org>

	* data/thumbnailer.schemas.in: