@@ -4,5 +4,5 @@ files and thumbnails from HTML files and web pages.
 Requirements:
 * gtk+
 * libpng
-* mozilla or firefox trunk build from 2005-05-10 or later
+* mozilla or firefox trunk build from 2005-07-15 21:20 UTC or later
 
